<resources>
    <string name="app_name">Bla Bla Wild</string>
    <string name="action_settings">Settings</string>
    <string name="toast">Remplissez tous les champs !</string>
    <string name="depart">Départ</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="Departure_time">Heure de départ</string>
    <string name="Blabla_Name">Nom</string>
    <string name="Price">Prix</string>
    <string name="search_itinerary">Rechercher un itinéraire</string>
    <string name="search">Rechercher</string>
</resources>
