<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewDepartureTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="19dp"
        android:text="@string/Departure_time" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewDepartureTime"
        android:layout_alignStart="@+id/textViewDepartureTime"
        android:layout_below="@+id/textViewDepartureTime"
        android:layout_marginTop="16dp"
        android:text="@string/Blabla_Name" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textViewDepartureTime"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/Price" />

</RelativeLayout>