<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.blablawild.SearchItineraryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/depart" />

        <EditText
            android:id="@+id/editTextSearchDeparture"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextSearchDeparture"
            android:layout_alignStart="@+id/editTextSearchDeparture"
            android:layout_below="@+id/editTextSearchDeparture"
            android:layout_marginLeft="10dp"
            android:text="@string/destination" />

        <EditText
            android:id="@+id/editTextSearchDestination"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextSearchDestination"
            android:layout_alignStart="@+id/editTextSearchDestination"
            android:layout_below="@+id/editTextSearchDestination"
            android:layout_marginLeft="10dp"
            android:text="@string/date" />

        <EditText
            android:id="@+id/editTextSearchDate"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/rechercher" />

    </LinearLayout>

</RelativeLayout>
